@@ -197,7 +197,7 @@ public class Utils {
 
 		long lTimeInMillis = oDate.getTime();
 
-		return new Double(lTimeInMillis);
+		return Double.valueOf(lTimeInMillis);
 	}
 	
 	public static long getProcessWorkspaceSecondsDuration(ProcessWorkspace oProcessWorkspace) {
@@ -521,5 +521,6 @@ public class Utils {
         // return the list 
         return aoOriginalList; 
     }	
+    
 
 }
